moved members csv import in members tab

--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/modal/import-segment/import-segment.component.html
@@ -3,8 +3,7 @@
 
   <div class="import-segment-body">
     <ng-container>
-      <mat-slide-toggle class="toggle-button" color="primary" [(ngModel)]="toggleValue" (change)="clearSegmentArray()">Import CSV</mat-slide-toggle>
-      <div *ngIf="toggleValue">
+      <!-- <div>
         <a href="/segments" (click)="downloadSampleCSV()">
           <p class="ft-16-400">
             {{ 'segments.download-segmemt-csv-sample.message.text' | translate }}
@@ -14,13 +13,11 @@
           {{ 'segments.import-segmemt-csv.message.text' | translate }}
         </p>
         <input accept=".csv" type="file" multiple class="ft-14-400 file-input" (change)="uploadFile($event)" />
-      </div>
-      <div *ngIf="!toggleValue">
-        <p class="ft-16-400 import-message">
-          {{ 'segments.import-segmemt.message.text' | translate }}
-        </p>
-        <input accept=".json" type="file" multiple class="ft-14-400 file-input" (change)="uploadFile($event)" />
-      </div>
+      </div> -->
+      <p class="ft-16-400 import-message">
+        {{ 'segments.import-segmemt.message.text' | translate }}
+      </p>
+      <input accept=".json" type="file" multiple class="ft-14-400 file-input" (change)="uploadFile($event)" />
     </ng-container>
   </div>
 
