--- a/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/segments/components/segment-members/segment-members.component.scss
@@ -31,7 +31,7 @@
     .cdk-column-removeMember {
       margin-right: 0;
       padding-right: 0;
-      flex: 0 0 10%;
+      flex: 0 0 15%;
       justify-content: center;
     }
 
@@ -40,13 +40,24 @@
       justify-content: left;
     }
     .cdk-column-id {
-      flex: 0 0 55%;
+      flex: 0 0 50%;
       justify-content: left;
       padding-top: 5px;
     }
     .cdk-column-memberNumber {
       flex: 0 0 10%;
       justify-content: left;
+    }
+
+    .import-csv {
+      color: var(--blue);
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    .select-file {
+      display: none;
     }
 
     .remove-icon {
