--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -154,7 +154,7 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
   border-radius: 7px;
   box-shadow: 0 0 8px 8px rgba(0, 0, 0, 0.12);
 
-  .mat-dialog-container {
+  .mat-mdc-dialog-container {
     padding: 0px;
     overflow: hidden !important;
   }
@@ -164,7 +164,7 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
 .state-time-logs-modal {
   border-radius: 7px;
 
-  .mat-dialog-container {
+  .mat-mdc-dialog-container {
     padding: 0px;
   }
 }
@@ -173,7 +173,7 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
   width: 400px;
   min-height: 192px;
 
-  .mat-dialog-container {
+  .mat-mdc-dialog-container {
     padding: 40px;
   }
 }
@@ -182,7 +182,7 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
   width: 700px;
   min-height: 192px;
 
-  .mat-dialog-container {
+  .mat-mdc-dialog-container {
     padding: 40px;
   }
 }
