--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -148,7 +148,7 @@
   border-radius: 7px;
   box-shadow: 0 0 8px 8px rgba(0, 0, 0, 0.12);
 
-  .mat-dialog-container {
+  .mat-mdc-dialog-container {
     padding: 0px;
     overflow: hidden !important;
   }
@@ -158,7 +158,7 @@
 .state-time-logs-modal {
   border-radius: 7px;
 
-  .mat-dialog-container {
+  .mat-mdc-dialog-container {
     padding: 0px;
   }
 }
@@ -167,7 +167,7 @@
   width: 400px;
   min-height: 192px;
 
-  .mat-dialog-container {
+  .mat-mdc-dialog-container {
     padding: 40px;
   }
 }
@@ -176,7 +176,7 @@
   width: 700px;
   min-height: 192px;
 
-  .mat-dialog-container {
+  .mat-mdc-dialog-container {
     padding: 40px;
   }
 }
