--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -117,6 +117,12 @@
   justify-content: space-between;
 }
 
+button[mat-button], button[mat-raised-button], button[mat-flat-button], button[mat-stroked-button], button[mat-icon-button] {
+  span {
+    letter-spacing: normal;
+  }
+}
+
 .default-button {
   background-color: var(--blue) !important;
   padding: 0 1rem;
@@ -234,15 +240,6 @@
 
 .new-user-modal {
   width: 805px;
-}
-
-.mat-mdc-button,
-.mat-mdc-unelevated-button,
-.mat-mdc-outlined-button {
-  /* TODO(mdc-migration): The following rule targets internal classes of button that may no longer apply for the MDC version.*/
-  &.cdk-program-focused .mat-button-focus-overlay {
-    opacity: 0 !important;
-  }
 }
 
 // Material library doesn't expose any params to prevent content truncation for these widgets.
