update radio btns mdc migration

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.scss
@@ -15,7 +15,8 @@
       }
     }
 
-    .mat-radio-button,
+    .mat-mdc-radio-button,
+    .mdc-label,
     .input {
       font-weight: 600;
     }
