Update checkbox/label style to match the previous design

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
@@ -122,8 +122,10 @@
           />
         </mat-chip-list>
       </mat-form-field>
-      <mat-checkbox class="ft-13-700 logging" color="primary" formControlName="logging">
-        {{ 'home.view-experiment.logging.text' | translate }}
+      <mat-checkbox color="primary" formControlName="logging">
+        <span class="ft-13-700">
+          {{ 'home.view-experiment.logging.text' | translate }}
+        </span>
       </mat-checkbox>
     </form>
     <div class="validation-container">
