--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-schedule/experiment-schedule.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-schedule/experiment-schedule.component.scss
@@ -1,4 +1,9 @@
 .experiment-schedule-form {
+  .mat-mdc-checkbox {
+    margin-top: -3px;
+    margin-left: -12px;
+  }
+
   .mat-radio-button,
   .input {
     font-weight: 600;
