--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.scss
@@ -24,7 +24,9 @@
     }
 
     .conditions-header-container {
-      margin-top: 10px;
+      .mat-mdc-checkbox {
+        margin-left: -2px;
+      }
     }
 
     .condition-table,
@@ -67,6 +69,10 @@
         width: 100%;
         max-width: 150px;
         justify-content: center;
+
+        .mat-mdc-checkbox {
+          margin-top: -5px;
+        }
       }
 
       .cdk-column-conditionCode {
