--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/conditions-table/conditions-table.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/conditions-table/conditions-table.component.scss
@@ -26,7 +26,9 @@
   }
 
   .conditions-weight-checkbox {
-    margin: 5px 20px 30px;
+    .mat-mdc-checkbox {
+      margin-left: -2px;
+    }
   }
 
   .conditions-table {
