--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/factorial-experiment-design.component.scss
@@ -67,6 +67,10 @@
         width: 100%;
         max-width: 150px;
         justify-content: center;
+
+        .mat-mdc-checkbox {
+          margin-top: -5px;
+        }
       }
 
       .cdk-column-actions {
