--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
@@ -2,8 +2,10 @@
   <span class="ft-24-700 title">{{ 'Experiment Ending Criteria' | translate }}</span>
 
   <form class="experiment-end-form" [formGroup]="experimentEndForm">
-    <mat-checkbox class="ft-14-700" color="primary" formControlName="endExperimentAutomatically">
-      {{ 'home.new-experiment.schedule.end-automatically.text' | translate }}
+    <mat-checkbox color="primary" formControlName="endExperimentAutomatically">
+      <span class="ft-14-700">
+        {{ 'home.new-experiment.schedule.end-automatically.text' | translate }}
+      </span>
     </mat-checkbox>
 
     <mat-radio-group formControlName="endCondition">
