Set max-height for table row

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
@@ -310,6 +310,10 @@ $font-size-small: 15px;
   .table-container {
     padding: 24px 34px;
 
+    .mat-row {
+      max-height: 50px;
+    }
+
     &-partition {
       margin-bottom: 24px;
 
