Add checkbox-label class to span elements

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-design/experiment-design.component.html
@@ -207,7 +207,7 @@
               [checked]="equalWeightFlag"
               (change)="changeEqualWeightFlag($event)"
             >
-              <span class="ft-13-700">
+              <span class="ft-13-700 checkbox-label">
                 {{ 'home.new-experiment.design.equal-assignment-weights.text' | translate }}
               </span>
             </mat-checkbox>
