--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-end-criteria/experiment-end-criteria.component.html
@@ -3,7 +3,7 @@
 
   <form class="experiment-end-form" [formGroup]="experimentEndForm">
     <mat-checkbox color="primary" formControlName="endExperimentAutomatically">
-      <span class="ft-14-700">
+      <span class="ft-14-700 checkbox-label">
         {{ 'home.new-experiment.schedule.end-automatically.text' | translate }}
       </span>
     </mat-checkbox>
