--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-status/experiment-status.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/modal/experiment-status/experiment-status.component.html
@@ -45,7 +45,7 @@
   </span>
   <span class="info-msg" *ngIf="showArchiveInfoMsg">
     <mat-checkbox color="primary" (change)="setArchivedStatusAgreement()">
-      <span class="ft-14-700">
+      <span class="ft-14-700 checkbox-label">
         {{ 'home.change-experiment-status.archiving-confirmation.text' | translate }}
       </span>
     </mat-checkbox>
