--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
@@ -261,7 +261,7 @@ $font-size-small: 15px;
           margin-top: -3px;
           margin-left: -12px;
 
-          span {
+          .checkbox-label {
             color: var(--grey-5);
           }
         }
