--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/enrollment-over-time/enrollment-over-time.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/enrollment-over-time/enrollment-over-time.component.html
@@ -18,7 +18,7 @@
           (click)="$event.stopPropagation()"
           (change)="toggleSelection($event, 'partitions')"
         >
-          <span class="ft-16-400">
+          <span class="ft-16-400 checkbox-label">
             {{ 'home.view-experiment.graph-select-all.text' | translate }}
           </span>
         </mat-checkbox>
@@ -45,7 +45,7 @@
           (click)="$event.stopPropagation()"
           (change)="toggleSelection($event, 'conditions')"
         >
-          <span class="ft-16-400">
+          <span class="ft-16-400 checkbox-label">
             {{ 'home.view-experiment.graph-select-all.text' | translate }}
           </span>
         </mat-checkbox>
