--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/conditions-table/conditions-table.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/factorial-experiment-design/conditions-table/conditions-table.component.html
@@ -10,7 +10,7 @@
       (change)="handleEqualWeightToggle()"
       [disabled]="!isExperimentEditable"
     >
-      <span class="ft-13-700">
+      <span class="ft-13-700 checkbox-label">
         {{ 'home.new-experiment.design.equal-assignment-weights.text' | translate }}
       </span>
     </mat-checkbox>
