--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.html
@@ -426,7 +426,7 @@
               (change)="toggleVerboseLogging($event)"
               [disabled]="experiment.state === ExperimentState.CANCELLED || experiment.state === ExperimentState.ARCHIVED"
             >
-              <span class="ft-16-600">
+              <span class="ft-16-600 checkbox-label">
                 {{ 'home.view-experiment.logging.text' | translate | uppercase }}
               </span>
             </mat-checkbox>
