--- a/frontend/projects/upgrade/src/styles.scss
+++ b/frontend/projects/upgrade/src/styles.scss
@@ -247,7 +247,7 @@ button[mat-button], button[mat-raised-button], button[mat-flat-button], button[m
     transform: scale(0.889); // transform 18px to 16px
   }
 
-  span {
+  .checkbox-label {
     margin-left: -8px;
     color: var(--black-2);
     letter-spacing: normal;
