mdc checkbox migration (#1210)
* initial mdc checkbox migration

* adjust labels styles and removed old class rules

* Update checkbox/label style to match the previous design

* Override span instead of label

* Update logging margin-top

* Update Select All checkbox padding

* Set max-height for table row

* Add checkbox-label class to span elements

---------

Co-authored-by: Zack Lee <zlee@carnegielearning.com>
Co-authored-by: Zack Lee <90279765+zackcl@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/enrollment-over-time/enrollment-over-time.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/enrollment-over-time/enrollment-over-time.component.html
@@ -18,7 +18,9 @@
           (click)="$event.stopPropagation()"
           (change)="toggleSelection($event, 'partitions')"
         >
-          {{ 'home.view-experiment.graph-select-all.text' | translate }}
+          <span class="ft-16-400 checkbox-label">
+            {{ 'home.view-experiment.graph-select-all.text' | translate }}
+          </span>
         </mat-checkbox>
         <mat-option *ngFor="let partition of partitionsFilterOptions" [value]="partition.id">
           {{ partition.point + ' (' + partition.twoCharacterId + ')' }}
@@ -43,7 +45,9 @@
           (click)="$event.stopPropagation()"
           (change)="toggleSelection($event, 'conditions')"
         >
-          {{ 'home.view-experiment.graph-select-all.text' | translate }}
+          <span class="ft-16-400 checkbox-label">
+            {{ 'home.view-experiment.graph-select-all.text' | translate }}
+          </span>
         </mat-checkbox>
         <mat-option *ngFor="let condition of conditionsFilterOptions" [value]="condition.id">
           {{ condition.code }}
