mdc checkbox migration (#1210)
* initial mdc checkbox migration

* adjust labels styles and removed old class rules

* Update checkbox/label style to match the previous design

* Override span instead of label

* Update logging margin-top

* Update Select All checkbox padding

* Set max-height for table row

* Add checkbox-label class to span elements

---------

Co-authored-by: Zack Lee <zlee@carnegielearning.com>
Co-authored-by: Zack Lee <90279765+zackcl@users.noreply.github.com>

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/pages/view-experiment/view-experiment.component.scss
@@ -255,13 +255,16 @@ $font-size-small: 15px;
       }
 
       .logging {
-        display: flex;
-        flex-direction: row;
-        flex-shrink: 0;
-        padding-top: 15px;
-        width: 90px;
-        color: var(--grey-5);
-        font-size: $font-size-small !important;
+        margin-top: 12px;
+
+        .mat-mdc-checkbox {
+          margin-top: -3px;
+          margin-left: -12px;
+
+          .checkbox-label {
+            color: var(--grey-5);
+          }
+        }
       }
     }
   }
@@ -306,6 +309,10 @@ $font-size-small: 15px;
 
   .table-container {
     padding: 24px 34px;
+
+    .mat-row {
+      max-height: 50px;
+    }
 
     &-partition {
       margin-bottom: 24px;
