--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-overview/experiment-overview.component.html
@@ -105,6 +105,7 @@
       <mat-form-field class="ft-14-600 tags">
         <mat-chip-grid #tagsList aria-label="Tags" formControlName="tags">
           <mat-chip-row
+            class="ft-12-600"
             *ngFor="let experimentTag of tags.value"
             [selectable]="isChipSelectable"
             [removable]="isChipRemovable"
