Replace mat-chip-option with mat-chip

--- a/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
+++ b/frontend/projects/upgrade/src/app/features/dashboard/home/components/experiment-list/experiment-list.component.html
@@ -218,30 +218,30 @@
         <td class="ft-12-600" mat-cell *matCellDef="let experiment">
           <mat-chip-listbox>
             <ng-container *ngFor="let context of experiment.context; let contextIndex = index">
-              <mat-chip-option
+              <mat-chip
                 *ngIf="contextIndex < 2; else moreContextTemplate"
                 class="ft-12-600"
                 (click)="filterExperimentByChips(context, ExperimentSearchKey.CONTEXT)"
               >
                 {{ context }}
-              </mat-chip-option>
+              </mat-chip>
               <ng-template #moreContextTemplate>
-                <mat-chip-option
+                <mat-chip
                   class="ft-12-600"
                   *ngIf="isAllChipsVisible(experiment.id, 'contextVisibility')"
                   (click)="filterExperimentByChips(context, ExperimentSearchKey.CONTEXT)"
                 >
                   {{ context }}
-                </mat-chip-option>
+                </mat-chip>
               </ng-template>
             </ng-container>
-            <mat-chip-option
+            <mat-chip
               *ngIf="experiment.context.length > 2 && !isAllChipsVisible(experiment.id, 'contextVisibility')"
               class="ft-12-600"
               (click)="setChipsVisible(experiment.id, 'contextVisibility')"
             >
               {{ '+' + (experiment.context.length - 2) }}
-            </mat-chip-option>
+            </mat-chip>
           </mat-chip-listbox>
         </td>
       </ng-container>
@@ -255,30 +255,30 @@
         <td class="ft-12-600" mat-cell *matCellDef="let experiment">
           <mat-chip-listbox>
             <ng-container *ngFor="let tag of experiment?.tags; let tagIndex = index">
-              <mat-chip-option
+              <mat-chip
                 *ngIf="tagIndex < 2; else moreTagsTemplate"
                 class="ft-12-600"
                 (click)="filterExperimentByChips(tag, ExperimentSearchKey.TAG)"
               >
                 {{ tag }}
-              </mat-chip-option>
+              </mat-chip>
               <ng-template #moreTagsTemplate>
-                <mat-chip-option
+                <mat-chip
                   class="ft-12-600"
                   *ngIf="isAllChipsVisible(experiment.id, 'tagsVisibility')"
                   (click)="filterExperimentByChips(tag, ExperimentSearchKey.TAG)"
                 >
                   {{ tag }}
-                </mat-chip-option>
+                </mat-chip>
               </ng-template>
             </ng-container>
-            <mat-chip-option
+            <mat-chip
               *ngIf="experiment.tags?.length > 2 && !isAllChipsVisible(experiment.id, 'tagsVisibility')"
               class="ft-12-600"
               (click)="setChipsVisible(experiment.id, 'tagsVisibility')"
             >
               {{ '+' + (experiment.tags.length - 2) }}
-            </mat-chip-option>
+            </mat-chip>
           </mat-chip-listbox>
         </td>
       </ng-container>
